<resources>
    <string name="app_name" translatable="false">Serial Manager</string>
    <string name="save">Save</string>
    <string name="command">Command</string>
    <string name="settings">Settings</string>
    <string name="restart_service">Restart Service</string>
    <string name="close_application">Close app</string>
    <string name="send_report">Send report</string>
    <string name="error">Error</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="awesome">Awesome</string>
    <string name="tab_title_commands">Commands</string>
    <string name="tab_title_widgets">Widgets</string>
    <string name="tab_title_logs">Logs</string>
    <string name="autoscroll">Autoscroll</string>
    <string name="clear">Clear</string>
    <string name="send">Send</string>
    <string name="connection_established">Connection established</string>
    <string name="connection_closed">Connection closed</string>
    <string name="connection_failed">Connection failed</string>
    <string name="crash_toast_text">Ooooops ! I crashed, but a report has been sent to my developer to help fix the issue !</string>
    <string name="crash_dialog_title">Send Crash Report?</string>
    <string name="crash_dialog_text">An unexpected error occurred forcing the
    application to stop. Please help us fix this by sending us error data,
    all you have to do is click OK.</string>
    <string name="crash_dialog_comment_prompt">You might add your comments about the problem below:</string>
    <string name="crash_dialog_ok_toast">Thank you!</string>
    <string name="notification_usb_connections_count">USB-connections</string>
    <string name="notification_bluetooth_connection_state">Bluetooth-connection</string>
    <string name="notification_web_socket_connections_count">WebSocket-connections</string>
    <string name="notification_default_connections_count">0</string>
    <string name="app_chooser_no_app">[ No app ]</string>
    <string name="app_chooser_title">Choose application</string>
    <string name="app_chooser_title_apps">Apps</string>
    <string name="app_chooser_title_shortcuts">Shortcuts</string>
    <string name="app_chooser_toast_app_not_found">Application \"%1$s\" not found</string>
    <string name="default__command_scatter" translatable="false">0.0</string>
    <string name="default__command_intent_value_extra" translatable="false">%value</string>
    <string name="default__command_noty_duration" translatable="false">3</string>
    <string name="default__command_noty_text_size" translatable="false">16</string>
    <string name="default__command_noty_bg_color" translatable="false">#88000000</string>
    <string name="default__command_noty_text_color" translatable="false">#FFFFFFFF</string>
    <string name="default__command_noty_offset" translatable="false">0</string>
    <string name="send_data_to_controller_format" translatable="false">%1$s:%2$s</string>
    <string name="command_title" translatable="false">%1$s : %2$s</string>
    <string name="command_subtitle" translatable="false">%1$s: %2$s</string>
    <string name="command_alert_empty_key_message">Field \"Key\" can\'t be empty</string>
    <string name="command_autoset_key_and_value">Autoset Key and Value</string>
    <string name="command_key">Key</string>
    <string name="command_value">Value</string>
    <string name="command_scatter">Scatter</string>
    <string name="command_intent_value_extra">Intent\'s \"value\" extra</string>
    <string name="command_action">Action</string>
    <string-array name="array_command_actions">
        <item>No action</item>
        <item>Run application</item>
        <item>Emulate key</item>
        <item>Shell command</item>
        <item>Send data</item>
        <item>System action</item>
    </string-array>
    <string name="command_emulated_key">Emulated key</string>
    <string name="shell_command">Shell command</string>
    <string name="send_data">Send data</string>
    <string name="system_action">System action</string>
    <string-array name="array_system_actions">
        <item>Shutdown</item>
        <item>Reboot</item>
        <item>Set brightness</item>
    </string-array>
    <string name="command_noty_message">Notification message</string>
    <string name="command_noty_duration">Duration</string>
    <string name="command_noty_position_priority">Position Priority</string>
    <string-array name="array_position_priorities">
        <item>On top of all windows</item>
        <item>On top of application windows</item>
    </string-array>
    <string name="command_noty_text_size">Text size</string>
    <string name="command_noty_background_color">Background color</string>
    <string name="command_noty_text_color">Text color</string>
    <string name="horizontal_position">Horizontal position</string>
    <string name="vertical_position">Vertical position</string>
    <string name="noty_horiz_offset_title">X-axis offset</string>
    <string name="noty_vert_offset_title">Y-axis offset</string>
    <string-array name="array_position_horiz_titles">
        <item>Left</item>
        <item>Center</item>
        <item>Right</item>
    </string-array>
    <string-array name="array_position_vert_titles">
        <item>Top</item>
        <item>Center</item>
        <item>Bottom</item>
    </string-array>
    <string name="dialog_title_confirm_delete_command">Delete command?</string>
    <string name="dialog_message_delete_command">Confirm the removal of the command:\n%1$s</string>
    <string name="dialog_delete_positive">Delete</string>
    <string name="dialog_negative">Cancel</string>
    <string name="title_activity_settings">@string/settings</string>
    <string-array name="array_baud_rates" translatable="false">
        <item>300</item>
        <item>1200</item>
        <item>2400</item>
        <item>4800</item>
        <item>9600</item>
        <item>19200</item>
        <item>38400</item>
        <item>57600</item>
        <item>115200</item>
    </string-array>
    <string name="pref_title_usb_data_bits" translatable="false">Data Bits</string>
    <string name="pref_default_usb_data_bits" translatable="false">8</string>
    <string-array name="array_usb_data_bits" translatable="false">
        <item>5 bits</item>
        <item>6 bits</item>
        <item>7 bits</item>
        <item>8 bits</item>
    </string-array>
    <string-array name="array_values_usb_data_bits" translatable="false">
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
    </string-array>
    <string name="pref_title_usb_stop_bits" translatable="false">Stop Bits</string>
    <string name="pref_default_usb_stop_bits" translatable="false">1</string>
    <string-array name="array_usb_stop_bits" translatable="false">
        <item>1</item>
        <item>2</item>
        <item>15</item>
    </string-array>
    <string-array name="array_values_usb_stop_bits" translatable="false">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>
    <string name="pref_title_usb_parity" translatable="false">Parity</string>
    <string name="pref_default_usb_parity" translatable="false">1</string>
    <string name="pref_title_usb_flow_control">Flow Control (only CP201x and FTDI)</string>
    <string name="pref_default_usb_flow_control" translatable="false">0</string>
    <string name="pref_header_general">General</string>
    <string name="danger_zone">Danger Zone</string>
    <string name="pref_title_start_on_boot">Start on boot</string>
    <string name="pref_summary_start_on_boot">Start the service on device boot completed</string>
    <string name="pref_title_start_on_boot_delay">Start delay after boot (sec)</string>
    <string name="pref_default_start_on_boot_delay" translatable="false">3</string>
    <string name="pref_title_start_when_screen_on">Start when screen on</string>
    <string name="pref_summary_start_when_screen_on">Start the service when screen turn on</string>
    <string name="pref_title_start_when_screen_on_delay">Start delay after screen on (sec)</string>
    <string name="pref_default_start_when_screen_on_delay" translatable="false">0</string>
    <string name="pref_title_stop_when_screen_off">Stop when screen off</string>
    <string name="pref_summary_stop_when_screen_off">Stop the service when screen turn off</string>
    <string name="pref_title_stop_when_screen_off_delay">Stop delay after screen off (sec)</string>
    <string name="pref_default_stop_when_screen_off_delay" translatable="false">0</string>
    <string name="pref_title_debugging">Enable debugging</string>
    <string name="pref_summary_debugging">Enable popups and send additional information to logcat</string>
    <string name="pref_default_command_format_regex" translatable="false">^\u003c(.+?):(.+?)\u003e$</string>
    <string name="pref_title_command_format_regex">Commands format (regex)</string>
    <string name="pref_title_always_execute_command_action">Always execute command\'s action</string>
    <string name="pref_summary_always_execute_command_action">Execute command\'s action even when Serial Manager is open</string>
    <string name="pref_header_usb">USB connection</string>
    <string name="pref_title_usb_communication_enabled">Enable USB communication</string>
    <string name="pref_title_usb_device">Usb device</string>
    <string name="pref_default_usb_baud_rate" translatable="false">9600</string>
    <string name="pref_title_usb_baud_rate">Serial port baud rate</string>
    <string name="pref_header_bluetooth">Bluetooth connection</string>
    <string name="pref_title_bluetooth_communication_enabled">Enable Bluetooth communication</string>
    <string name="pref_title_bluetooth_device">Bluetooth device</string>
    <string name="pref_default_bluetooth_device" translatable="false" />
    <string name="pref_title_bluetooth_adapter_turn_on">Turn on bluetooth adapter</string>
    <string name="pref_summary_bluetooth_adapter_turn_on">Turn on bluetooth adapter on Service create, if it is off</string>
    <string name="pref_title_bluetooth_le_protocol">Use BLE protocol</string>
    <string name="pref_summary_bluetooth_le_protocol">Use Bluetooth Low Energy protocol for receiving/sending data</string>
    <string name="pref_header_web_socket">WebSocket connection</string>
    <string name="pref_title_serial_communication_enabled">Enable Serial communication</string>
    <string name="pref_title_serial_path">Path</string>
    <string name="pref_default_serial_path" translatable="false">/dev/ttyS0</string>
    <string name="pref_title_serial_baud_rate">Serial port baud rate</string>
    <string name="pref_default_serial_baud_rate" translatable="false">9600</string>
    <string name="pref_header_controller_communication">Controller communication</string>
    <string name="pref_title_crlf">Add CR&#38;LF</string>
    <string name="pref_summary_crlf">Add Carriage Return and Line Feed symbols to end of sending data</string>
    <string name="pref_title_send_connection_state">Send connection state messages</string>
    <string name="pref_summary_send_connection_state">Send \"kg.serial.manager.connection_established\" to controller when connection established\nand \"kg.serial.manager.connection_lost\" on service stop</string>
    <string name="pref_title_send_light_sensor_data">Send light sensor data</string>
    <string name="pref_summary_send_light_sensor_data" translatable="false">light_sensor_value:12345\nlight_sensor_mode:0–7</string>
    <string name="pref_title_send_screen_state">Send screen state</string>
    <string name="pref_summary_send_screen_state">Send \"screen:on\" when screen turns on and \"screen:off\" when screen turns off</string>
    <string name="widget_parameter_text">Text</string>
    <string name="widget_text_alignment">Text alignment</string>
    <string name="widget_text_vertical_position">Vertical position of text</string>
</resources>