<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <CheckBoxPreference android:key="start_on_boot"
        android:defaultValue="@bool/pref_default_start_on_boot"
        android:title="@string/pref_title_start_on_boot"
        android:summary="@string/pref_summary_start_on_boot" />

    <EditTextPreference android:key="start_on_boot_delay"
        android:dependency="start_on_boot"
        android:defaultValue="@string/pref_default_start_on_boot_delay"
        android:title="@string/pref_title_start_on_boot_delay"
        android:inputType="number"
        android:selectAllOnFocus="true"
        android:maxLines="1" />

    <CheckBoxPreference android:key="start_when_screen_on"
        android:defaultValue="@bool/pref_default_start_when_screen_on"
        android:title="@string/pref_title_start_when_screen_on"
        android:summary="@string/pref_summary_start_when_screen_on" />

    <EditTextPreference android:key="start_when_screen_on_delay"
        android:dependency="start_when_screen_on"
        android:defaultValue="@string/pref_default_start_when_screen_on_delay"
        android:title="@string/pref_title_start_when_screen_on_delay"
        android:inputType="number"
        android:selectAllOnFocus="true"
        android:maxLines="1" />

    <CheckBoxPreference android:key="stop_when_screen_off"
        android:defaultValue="@bool/pref_default_stop_when_screen_off"
        android:title="@string/pref_title_stop_when_screen_off"
        android:summary="@string/pref_summary_stop_when_screen_off" />

    <EditTextPreference android:key="stop_when_screen_off_delay"
        android:dependency="stop_when_screen_off"
        android:defaultValue="@string/pref_default_stop_when_screen_off_delay"
        android:title="@string/pref_title_stop_when_screen_off_delay"
        android:inputType="number"
        android:selectAllOnFocus="true"
        android:maxLines="1" />

    <!--<CheckBoxPreference android:key="volume_show_ui"-->
        <!--android:defaultValue="true"-->
        <!--android:title="@string/pref_title_volume_show_ui" />-->

    <CheckBoxPreference android:key="debugging"
        android:defaultValue="@bool/pref_default_debugging"
        android:title="@string/pref_title_debugging"
        android:summary="@string/pref_summary_debugging" />

    <PreferenceCategory
        android:layout="@layout/preference_category_danger_zone"
        android:title="@string/danger_zone">

        <EditTextPreference android:key="command_format_regex"
            android:defaultValue="@string/pref_default_command_format_regex"
            android:title="@string/pref_title_command_format_regex"
            android:inputType="text"
            android:selectAllOnFocus="true"
            android:maxLines="1" />

        <CheckBoxPreference android:key="always_execute_command_action"
            android:defaultValue="@bool/pref_default_always_execute_command_action"
            android:title="@string/pref_title_always_execute_command_action"
            android:summary="@string/pref_summary_always_execute_command_action" />

    </PreferenceCategory>

</PreferenceScreen>
