<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <LinearLayout android:id="@+id/main_layout"
        style="@style/MaxWidthStyle"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:orientation="vertical"
        android:padding="@dimen/activity_margin"
        android:baselineAligned="false"
        android:showDividers="middle"
        android:divider="@drawable/form_elements_divider"
        android:clickable="true"
        android:focusable="true"
        android:focusableInTouchMode="true"
        tools:context=".widgets.WidgetReceiveActivity">

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/command_key">
            <android.support.design.widget.TextInputEditText android:id="@+id/xKey"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:maxLines="1" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/widget_parameter_text">
            <android.support.design.widget.TextInputEditText android:id="@+id/xText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:maxLines="1" />
        </android.support.design.widget.TextInputLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <android.support.design.widget.TextInputLayout
                android:layout_width="0dip"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:hint="@string/command_noty_text_size"
                android:gravity="center_vertical">
                <android.support.design.widget.TextInputEditText android:id="@+id/xTextSize"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:maxLines="1"
                    android:inputType="number" />
            </android.support.design.widget.TextInputLayout>

            <android.support.v7.widget.AppCompatButton android:id="@+id/xTextColorButton"
                android:layout_width="0dip"
                android:layout_weight="1"
                android:layout_height="match_parent"
                android:text="@string/command_noty_text_color"
                android:textSize="12sp" />
            <TextView android:id="@+id/xTextColor"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:visibility="gone" />

            <android.support.v7.widget.AppCompatButton android:id="@+id/xBackgroundColorButton"
                android:layout_width="0dip"
                android:layout_weight="1"
                android:layout_height="match_parent"
                android:text="@string/command_noty_background_color"
                android:textSize="12sp" />
            <TextView android:id="@+id/xBackgroundColor"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:visibility="gone" />

        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:baselineAligned="false">

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="0dip"
                android:layout_weight="1"
                android:layout_height="wrap_content">
                <TextView style="@style/InputLabel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/textColorHint"
                    android:maxLines="1"
                    android:text="@string/widget_text_vertical_position"
                    android:translationY="-2dp"/>
                <android.support.v7.widget.AppCompatSpinner android:id="@+id/xTextVerticalPosition"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingRight="12dp"
                    android:paddingEnd="12dp"
                    android:entries="@array/array_position_vert_titles" />
                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/textColorHint"
                    android:layout_marginLeft="@dimen/input_label_horizontal_spacing"
                    android:layout_marginRight="@dimen/input_label_horizontal_spacing"/>
            </LinearLayout>

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="0dip"
                android:layout_weight="1"
                android:layout_height="wrap_content">
                <TextView style="@style/InputLabel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/textColorHint"
                    android:text="@string/widget_text_alignment"
                    android:translationY="-2dp"/>
                <android.support.v7.widget.AppCompatSpinner android:id="@+id/xTextAlignment"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingRight="12dp"
                    android:paddingEnd="12dp"
                    android:entries="@array/array_widget_text_alignment_titles" />
                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/textColorHint"
                    android:layout_marginLeft="@dimen/input_label_horizontal_spacing"
                    android:layout_marginRight="@dimen/input_label_horizontal_spacing"/>
            </LinearLayout>

        </LinearLayout>


        <View
            android:visibility="invisible"
            style="@style/MaxWidthStyle"
            android:layout_height="1dp"
            android:layout_marginTop="@dimen/activity_margin"
            android:layout_marginBottom="@dimen/activity_margin" />


        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView style="@style/InputLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/textColorHint"
                android:text="@string/command_action" />
            <android.support.v7.widget.AppCompatSpinner android:id="@+id/xAction"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingRight="12dp"
                android:paddingEnd="12dp"
                android:entries="@array/array_command_actions" />
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/textColorHint"
                android:layout_marginLeft="@dimen/input_label_horizontal_spacing"
                android:layout_marginRight="@dimen/input_label_horizontal_spacing"/>
        </LinearLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <android.support.design.widget.TextInputLayout android:id="@+id/xAppChooserLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/app_chooser_title">
                <kg.delletenebre.serialmanager2.views.AppChooserView
                    android:id="@+id/xAppChooser"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:maxLines="2"
                    android:drawableTint="@color/inputBottomLine" />
            </android.support.design.widget.TextInputLayout>

            <LinearLayout android:id="@+id/xEmulateKeyLayout"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView style="@style/InputLabel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/textColorHint"
                    android:text="@string/command_emulated_key" />
                <android.support.v7.widget.AppCompatSpinner android:id="@+id/xEmulateKey"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingRight="12dp"
                    android:paddingEnd="12dp" />
                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/textColorHint"
                    android:layout_marginLeft="@dimen/input_label_horizontal_spacing"
                    android:layout_marginRight="@dimen/input_label_horizontal_spacing"/>
            </LinearLayout>

            <android.support.design.widget.TextInputLayout android:id="@+id/xShellCommandLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/shell_command">
                <android.support.design.widget.TextInputEditText android:id="@+id/xShellCommand"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:maxLines="1" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout android:id="@+id/xSendDataLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/send_data">
                <android.support.design.widget.TextInputEditText android:id="@+id/xSendData"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:maxLines="1" />
            </android.support.design.widget.TextInputLayout>

        </RelativeLayout>

    </LinearLayout>

</ScrollView>
